--- a/package.json
+++ b/package.json
@@ -10,21 +10,23 @@
     "typegen": "npx sanity@latest schema extract && npx sanity@latest typegen generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.11.3",
+    "@clerk/nextjs": "^6.12.4",
     "@radix-ui/react-slot": "^1.1.2",
+    "@sanity/client": "^6.28.3",
     "@sanity/icons": "^3.6.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.75.1",
+    "@sanity/visual-editing": "^2.13.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
-    "next-sanity": "^9.8.58",
+    "next-sanity": "^9.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-is": "^19.0.0",
-    "sanity": "^3.75.1",
+    "sanity": "^3.78.1",
     "stripe": "^17.7.0",
     "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.1",
