--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.4",
+    "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@react-email/components": "^0.0.33",
     "@sanity/client": "^6.28.3",
     "@sanity/icons": "^3.6.0",
     "@sanity/image-url": "^1.1.0",
@@ -25,12 +28,16 @@
     "next-sanity": "^9.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-is": "^19.0.0",
+    "resend": "^4.1.2",
     "sanity": "^3.78.1",
+    "sonner": "^2.0.1",
     "stripe": "^17.7.0",
     "styled-components": "^6.1.15",
-    "tailwind-merge": "^3.0.1",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
